# http-callback-server

./: .pre-commit-config.yaml  README.md  pyproject.toml
http_callback_server/: __init__.py  request.py  request_handler.py  server.py
tests/: test_http_callback_server.py
