[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.isort]
profile = "black"

[tool.mypy]
exclude = "tests/"
strict = true

[tool.poetry]
name = "http-callback-server"
version = "0.1.0"
description = ""
authors = ["julien <git@julienc.io>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
types-requests = "^2.27"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
